feat(reports): source unique par dataset + colonnes enrichies + i18n exports
Harmonise les 5 rapports exportables (revue de coherence) : chaque dataset
a desormais UNE seule source de colonnes+formatage, reutilisee par tous les
chemins d'export, et les libelles PDF passent par i18n.

FACTURES (source unique, 11 colonnes) :
- Nouveau invoiceExportHeaders() + buildExportRows() enrichi dans
  InvoiceService, reutilise par InvoiceController (CSV/Excel/PDF),
  ReportController /export/excel (reecrit via TabularExportService) ET le
  builder M11 dataset INVOICES — plus aucune divergence entre les 3.
- Enrichissements : Email fournisseur, Date de creation, Statut de
  rapprochement (MATCHED/MISMATCH/-, resolu en 1 requete batch, pas de N+1
  via findLatestStatusByInvoiceIds).
- Statut TRADUIT partout (fin du .name() brut du builder).

FOURNISSEURS : dataset SUPPLIERS du builder aligne exactement sur
/suppliers/export (7 colonnes : + Adresse, + Categorie).

BUDGET : dataset builder + Nom de departement (localise, deja dans le DTO).

PDF Audit + Compliance : en-tetes i18n (Audit Trail/Date/User/Transition/
Reason au lieu du dur) ; montant et devise en 2 colonnes separees (aligne
sur l'Excel) au lieu de fusionnes.

i18n : 8 nouvelles cles report.excel.header.* (FR Latin-1 + EN) ;
suppression de 9 cles report.excel.header.* DUPLIQUEES et corrompues dans
messages_fr (accents perdus par un append UTF-8 anterieur) ; FR/EN de
nouveau symetriques (41 cles chacun, 0 doublon dans tout le fichier).

Tests : +2 (buildExportRows enrichi + matching '-') ; stubs report mis a
jour (7-arg, invoiceExportHeaders). Backend ./mvnw test 567/0/0.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>